<resources>
    <string name="app_name">Event Manager</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_HRV">Password</string>
    <string name="enter_comment">Enter Comment</string>
    <string name="submit_button_text">Submit</string>
    <string name="registrationLink">Don\'t have an account? Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Create Account</string>
    <string name="full_name">Full name</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm_password_HRV">Confirm password</string>
    <string name="emptyTextCheck">Please fill in all fields</string>
    <string name="wrongPhoneNumberCheck">Please enter a valid phone number</string>
    <string name="wrongEmailCheck">Please enter a valid email address</string>
    <string name="wrongPasswordCheck">Please enter the correct password</string>
    <string name="loginLink">Already have an account? Log in</string>
    <string name="failedLogin">Login failed</string>
    <string name="successfullSignUp">Successful registration</string>
    <string name="failedSignUp">Error during registration</string>
    <string name="successfullSignIn">Successful sign-in</string>
    <string name="failedSignIn">Error during sign-in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Event_Fragment">Events</string>
    <string name="Tickets_Fragment">Tickets</string>
    <string name="Profile_Fragment">Profile</string>
    <string name="Location_Fragment">Location</string>
    <string name="create_a_new_event">Create a new event</string>
    <string name="create_a_new_ticket">Create a new ticket</string>
    <string name="event_name">Event Name</string>
    <string name="event_date">Date</string>
    <string name="new_event_time">Time</string>
    <string name="new_event_type">Type</string>
    <string name="new_event_location">Location</string>
    <string name="new_event_description">Description</string>
    <string name="google_map_api_key">AIzaSyCjjEzvlcJbuN0Z74So1DJvW8WfgV-0WpI</string>
    <string name="reset_button_text">Reset All</string>
    <string name="concert_button_text">Concert</string>
    <string name="sport_button_text">Sport</string>
    <string name="show_button_text">Show</string>
    <string name="politics_button_text">Politics</string>
    <string name="business_button_text">Business</string>
    <string name="save_btn">Save data</string>
    <string name="save_HRV">Save</string>
    <string name="logout">Logout</string>
    <string name="logout_HRV">Logout</string>
    <string name="insert_pass_HRV">Enter your password</string>
    <string name="delete_profile_HRV">Delete profile</string>
    <string name="event_image_description">Image</string>
    <string name="add_ticket">Add ticket</string>
    <string name="add_new_ticket">Add new ticket</string>
    <string name="buy_ticket">Buy ticket</string>
    <string name="ticket_type">Ticket type</string>
    <string name="price">Price</string>
    <string name="ticket_category">Ticket category</string>
    <string name="show_to_the_event_organizer">Your Qr code:</string>
    <string name="scanQrCode">Scan QR code</string>
    <string name="update_ticket">Update ticket</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="signForEvent">Sign up for event</string>
    <string name="signForEventText">Sign up for the event</string>
    <string name="signoutFromEventText">Sign out from the event</string>
    <string name="povijest_evenata">Event history</string>
    <string name="emptyListHRV">The list is empty</string>
    <string name="close">Close</string>
    <string name="welcome_heading">WELCOME</string>
    <string name="sign_in_to_continue_heading">Sign in to continue</string>
    <string name="points">Points:</string>
    <string name="generateReport">Show statistics</string>
    <string name="statsHeader">Event details</string>
</resources>
