<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    >

    <TextView
        android:id="@+id/headerUserEventList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/worksans_bold"
        android:text="@string/povijest_evenata"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvUserEventList"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerUserEventList" />

    <Button
        android:id="@+id/btnCloseDialogProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/worksans_bold"
        android:textColor="@color/white"
        android:backgroundTint="@color/color_secondary_orange"
        android:layout_marginTop="24dp"
        android:text="@string/close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvUserEventList" />

    <TextView
        android:id="@+id/txtEmptyListMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emptyListHRV"
        android:textColor="@color/color_text_700"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/rvUserEventList"
        app:layout_constraintEnd_toEndOf="@+id/rvUserEventList"
        app:layout_constraintStart_toStartOf="@+id/rvUserEventList"
        app:layout_constraintTop_toBottomOf="@+id/headerUserEventList" />
</androidx.constraintlayout.widget.ConstraintLayout>